sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:22: error: Unmatched closing brace '}' ignored here
}
^